--- a/ubuntu_18.04/qt5/Dockerfile
+++ b/ubuntu_18.04/qt5/Dockerfile
@@ -1,3 +1,3 @@
 FROM	gboysking/dev:U18.04_base
-RUN apt-get install -y qt5-default qtcreator
-ENTRYPOINT qtcreator
+RUN apt-get install -y -- no-install-recommends qt5-default qtcreator
+
