On branch master  Your branch is up to date with 'origin/master'.

--- a/ubuntu_18.04/qt5/Dockerfile
+++ b/ubuntu_18.04/qt5/Dockerfile
@@ -1,3 +1,5 @@
 FROM	gboysking/dev:U18.04_base
-RUN apt-get install -y --no-install-recommends qt5-default qtcreator
+RUN apt-get update \
+apt-get install -y --no-install-recommends qt5-default qtcreator \
+&& rm -rf /var/lib/apt/lists/* \
 
