--- a/ubuntu_18.04/qt5/Dockerfile
+++ b/ubuntu_18.04/qt5/Dockerfile
@@ -1,5 +1,5 @@
-FROM	gboysking/dev:U18.04_base
+FROM	gboysking/dev:ubuntu-18.04-base
 RUN apt-get update \
-apt-get install -y --no-install-recommends qt5-default qtcreator \
+&& apt-get install -y --no-install-recommends qt5-default qtcreator \
 && rm -rf /var/lib/apt/lists/* \
 
